--- a/make.conf
+++ b/make.conf
@@ -9,32 +9,33 @@ LC_MESSAGES=C
 PORTAGE_NICENESS=19
 PORTAGE_IONICE_COMMAND="ionice -c 3 -p \${PID}"
 
+EMERGE_DEFAULT_OPTS="--ask --ask-enter-invalid --jobs=1 --load-average=1"
+MAKEOPTS="-j1 -l1"
+
 FEATURES="nostrip cgroup collision-protect downgrade-backup ipc-sandbox network-sandbox parallel-fetch parallel-install sign"
+
+ACCEPT_LICENSE="-* @BINARY-REDISTRIBUTABLE"
+ACCEPT_KEYWORDS="amd64"
 
 QEMU_SOFTMMU_TARGETS="arm x86_64"
 QEMU_USER_TARGETS="x86_64"
 
-ACCEPT_LICENSE="-* @BINARY-REDISTRIBUTABLE"
+PYTHON_TARGETS="python3_10 python3_11"
 
-# in the sorting process...
-USE="bash-completion offensive \
+USE="bash-completion \
      aac flac mp3 ogg opus \
-     apng eps gif jpeg jpeg2k jpegxl webp png postscript svg tiff \
+     apng eps gif jpeg jpeg2k jpegxl webp png postscript tiff \
      archive bzip2 lz4 lzma lzo zip zlib zstd \
-     dbus gamepad joystick lm-sensors \
-     X xorg -wayland elogind \
-     pipewire -pulseaudio \
-     -llvm -clang threads \
-     -gnome -gnome-keyring \
-     argon2 asm cjk fortran cxx djvu drm \
+     dbus lm-sensors \
+     udev X xorg -wayland elogind \
+     alsa pipewire -pulseaudio \
+     threads \
+     gtk qt5 -kde -gnome -gnome-keyring \
+     cjk fortran djvu drm \
      verify-sig \
-     sasl ssl \
-     fftw fifo fontconfig git gpg icu inotify jit \
-     opengl \
-     v4l udev openh264 x264 x265 xinerama xs xv xvid xxhash \
+     v4l openh264 x264 x265 xinerama xs xv xvid xxhash \
      zimg -bindist -bluetooth -bluray -cdda -cdr \
      -clamav -cups -dvd -emacs -geoip -geoloc \
      -googledrive -ios -ipod -quicktime \
-     -ieee1394 -jack -kde -ldap -motif -nas -networkmanager \
-     -systemd -policykit -gstreamer -smartcard -suid -ubac \
-     -xemacs"
+     -ieee1394 -jack -ldap -motif -nas -networkmanager \
+     -systemd -policykit -gstreamer -smartcard"
