--- a/make.conf
+++ b/make.conf
@@ -9,8 +9,8 @@ LC_MESSAGES=C
 PORTAGE_NICENESS=19
 PORTAGE_IONICE_COMMAND="ionice -c 3 -p \${PID}"
 
-EMERGE_DEFAULT_OPTS="--ask --ask-enter-invalid --jobs=1 --load-average=1"
-MAKEOPTS="-j1 -l1"
+EMERGE_DEFAULT_OPTS="--ask --ask-enter-invalid --jobs=6 --load-average=11.9"
+MAKEOPTS="-j8"
 
 FEATURES="nostrip pid-sandbox collision-protect downgrade-backup ipc-sandbox network-sandbox parallel-fetch parallel-install sign"
 
@@ -19,6 +19,9 @@ ACCEPT_KEYWORDS="amd64"
 
 QEMU_SOFTMMU_TARGETS="arm x86_64"
 QEMU_USER_TARGETS="x86_64"
+
+INPUT_DEVIDES="libinput keyboard wacom"
+VIDEO_CARDS="nvidia"
 
 USE="caps filecaps seccomp verify-sig \
      cjk bash-completion -emacs \
