--- a/make.conf
+++ b/make.conf
@@ -28,6 +28,7 @@ USE="bash-completion \
      archive bzip2 lz4 lzma lzo zip zlib zstd \
      dbus lm-sensors \
      udev X xorg -wayland elogind \
+     opengl vulkan \
      alsa pipewire -pulseaudio \
      threads \
      gtk qt5 -kde -gnome -gnome-keyring \
