--- a/make.conf
+++ b/make.conf
@@ -22,21 +22,16 @@ QEMU_USER_TARGETS="x86_64"
 
 PYTHON_TARGETS="python3_10 python3_11"
 
-USE="bash-completion \
+USE="caps filecaps seccomp verify-sig \
+     cjk bash-completion -emacs \
      aac flac mp3 ogg opus \
      apng eps gif jpeg jpeg2k jpegxl webp png postscript tiff \
-     archive bzip2 lz4 lzma lzo zip zlib zstd \
-     dbus lm-sensors \
-     udev X xorg -wayland elogind \
-     opengl vulkan \
-     alsa pipewire -pulseaudio \
-     threads \
+     djvu epub pdf \
+     bzip2 lz4 lzma lzo zip zlib zstd \
+     udev dbus lm-sensors \
+     X xorg xinerama -wayland elogind \
+     opengl vulkan v4l \
+     alsa pipewire -pulseaudio -jack \
      gtk qt5 -kde -gnome -gnome-keyring \
-     cjk fortran djvu drm \
-     verify-sig \
-     v4l openh264 x264 x265 xinerama xs xv xvid xxhash \
-     zimg -bindist -bluetooth -bluray -cdda -cdr \
-     -clamav -cups -dvd -emacs -geoip -geoloc \
-     -googledrive -ios -ipod -quicktime \
-     -ieee1394 -jack -ldap -motif -nas -networkmanager \
-     -systemd -policykit -gstreamer -smartcard"
+     -bluetooth  -smartcard \
+     -systemd -policykit -gstreamer -ldap -networkmanager -cups"
