--- a/make.conf
+++ b/make.conf
@@ -1,4 +1,4 @@
-COMMON_FLAGS="-march=native -O2 -pipe"
+COMMON_FLAGS="-march=ivybridge -mtune=ivybridge -maes -O2 -pipe"
 CFLAGS="${COMMON_FLAGS}"
 CXXFLAGS="${COMMON_FLAGS}"
 FCFLAGS="${COMMON_FLAGS}"
@@ -9,16 +9,19 @@ LC_MESSAGES=C
 PORTAGE_NICENESS=19
 PORTAGE_IONICE_COMMAND="ionice -c 3 -p \${PID}"
 
-EMERGE_DEFAULT_OPTS="--ask --ask-enter-invalid --jobs=1 --load-average=1"
-MAKEOPTS="-j1 -l1"
+EMERGE_DEFAULT_OPTS="--ask --ask-enter-invalid --jobs=2 --load-average=3.9"
+MAKEOPTS="-j33 -l4"
 
-FEATURES="nostrip pid-sandbox collision-protect downgrade-backup ipc-sandbox network-sandbox parallel-fetch parallel-install sign"
+FEATURES="distcc nostrip pid-sandbox collision-protect downgrade-backup ipc-sandbox network-sandbox parallel-fetch parallel-install sign"
 
 ACCEPT_LICENSE="-* @BINARY-REDISTRIBUTABLE"
 ACCEPT_KEYWORDS="amd64"
 
 QEMU_SOFTMMU_TARGETS="arm x86_64"
 QEMU_USER_TARGETS="x86_64"
+
+INPUT_DEVICES="libinput synaptics wacom"
+VIDEO_CARDS="intel"
 
 USE="caps filecaps seccomp verify-sig \
      cjk bash-completion -emacs \
