Stabilized some packages, removed unneeded repo

--- a/repos.conf/eselect-repo.conf
+++ b/repos.conf/eselect-repo.conf
@@ -1,10 +1,5 @@
 # created by eselect-repo
 
-[ib-overlay]
-location = /var/db/repos/ib-overlay
-sync-type = git
-sync-uri = https://github.com/ivan-boikov/ib-overlay
-
 [vapoursynth]
 location = /var/db/repos/vapoursynth
 sync-type = git
@@ -30,3 +25,12 @@ location = /var/db/repos/ArchFeh
 sync-type = git
 sync-uri = https://github.com/gentoo-mirror/ArchFeh.git
 
+[ace]
+location = /var/db/repos/ace
+sync-type = git
+sync-uri = https://github.com/gentoo-mirror/ace.git
+
+[fem-overlay]
+location = /var/db/repos/fem-overlay
+sync-type = git
+sync-uri = https://github.com/gentoo-mirror/fem-overlay.git
