--- a/make.conf
+++ b/make.conf
@@ -28,7 +28,7 @@ USE="caps filecaps seccomp verify-sig \
      bzip2 lz4 lzma lzo zip zlib zstd \
      udev dbus lm-sensors \
      X xorg xinerama -wayland elogind \
-     opengl vulkan v4l \
+     opengl vulkan v4l vaapi \
      alsa pipewire -pulseaudio -jack \
      gtk qt5 -kde -gnome -gnome-keyring \
      -bluetooth  -smartcard \
