--- a/make.conf
+++ b/make.conf
@@ -30,6 +30,7 @@ USE="caps filecaps seccomp verify-sig \
      X xorg xinerama -wayland elogind \
      opengl vulkan v4l vaapi \
      alsa pipewire -pulseaudio -jack \
-     gtk qt5 -kde -gnome -gnome-keyring -introspection -gtk-doc \
+     gtk qt5 -kde -gnome -gnome-keyring -gtk-doc \
+     -introspection -vala \
      -bluetooth  -smartcard \
      -systemd -policykit -gstreamer -ldap -networkmanager -cups"
