--- a/make.conf
+++ b/make.conf
@@ -12,7 +12,7 @@ PORTAGE_IONICE_COMMAND="ionice -c 3 -p \${PID}"
 EMERGE_DEFAULT_OPTS="--ask --ask-enter-invalid --jobs=1 --load-average=1"
 MAKEOPTS="-j1 -l1"
 
-FEATURES="nostrip cgroup collision-protect downgrade-backup ipc-sandbox network-sandbox parallel-fetch parallel-install sign"
+FEATURES="nostrip pid-sandbox collision-protect downgrade-backup ipc-sandbox network-sandbox parallel-fetch parallel-install sign"
 
 ACCEPT_LICENSE="-* @BINARY-REDISTRIBUTABLE"
 ACCEPT_KEYWORDS="amd64"
